Fixed chrome overflow attack on header.

--- a/public/LESS_FILES/overrides.less
+++ b/public/LESS_FILES/overrides.less
@@ -41,7 +41,6 @@
 
 #header {
     padding: 0;
-    overflow: hidden;
 
     & > div {
         display: block;
@@ -217,7 +216,7 @@
         font-size: 13px;
     }
     nav ul {
-        margin-top: 8px;
+        margin-top: 7px;
         margin-left: 0;
         width: auto;
         line-height: @line-height-base;
